[package]
name = "x-in-y"
version = "0.1.0"
authors = ["Rory McCann <rory@technomancy.org>"]
edition = "2018"
license = "AGPL-3+"
description = "Find long chains of 'place X in the bounday Y, place Y is in boundary Z' chains from OpenStreetMap"
repository = "https://github.com/rory/osm-longest-place-boundary-includes"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.6"
flate2 = "1.0"
anyhow = "1.0"
serde = { version = "1", features = ["derive"] }
separator = "0.3.1"
ctrlc = "3.1.9"
